Added buttons for grading answers.
